--- a/atividadeAvaliativa/index.html
+++ b/atividadeAvaliativa/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><img src="imagens/logotipo.png" alt="Logo pizzaria" width="320" height="205"></header>
+    
+    <header>
+        <img class="imgLogo" src="imagens/logotipo.png" alt="Logo pizzaria" width="320" height="205">
+    </header>
     
     <div class="sobreNos">
-        <h1 class="titulo">Pizzaria do Jensken</h1>
+        <h1 class="tituloPrincipal">Pizzaria do Jensken</h1>
         <h2 class="titulo">Sobre nós</h2>
         <p>Nossa pizzaria é <b>tradicional</b> em Brasília fundada em 2009, que tem como foco, pizza de qualidade por um preço accesivel. temos o objetivo de democratizar o acesso a pizza de qualidade para que todos possam comer aquela pizza de <b>qualidade.</b></p>
     </div>
