--- a/atividadeAvaliativa/index.html
+++ b/atividadeAvaliativa/index.html
@@ -19,24 +19,15 @@
         <p>Nossa pizzaria é <b>tradicional</b> em Brasília fundada em 2009, que tem como foco, pizza de qualidade por um preço accesivel. temos o objetivo de democratizar o acesso a pizza de qualidade para que todos possam comer aquela pizza de <b>qualidade.</b></p>
     </div>
 
-    <div class="cardapio">
-        <h2 class="titulo">Cardápio</h2>
+    <h2 class="titulo">Cardápio</h2>
         <ul class="lista1">
-            <li>Calabresa</li>
-            <li>Portuguesa</li>
-            <li>Peperoni</li>
-            <li>Carne Seca</li>
-            <li>Frango com Catupiry</li>
+            <li>Calabresa ------------ R$ 25</li>
+            <li>Portuguesa ---------- R$ 25</li>
+            <li>Peperoni ------------- R$ 25</li>
+            <li>Carne Seca --------- R$ 25</li>
+            <li>Frango --------------- R$ 25</li>
         </ul>
-        
-        <ul class="lista2">
-            <li>Napolitano</li>
-            <li>Lombo Canadense</li>
-            <li>Quatro Queijos</li>
-            <li>Marguerita</li>
-            <li>Romeu e Julieta</li>
-        </ul>
-    </div>
+   
 
     <div class="endereco">
         <h2 class="titulo">Endereço</h2>
@@ -44,7 +35,7 @@
     </div>
 
     <footer>
-        <p>Desenvolvido por Nicolas Almeida</p>
+        <p>Desenvolvido por <a href="https://github.com/nicolasamedeiros"> <b>Nicolas Almeida</b></a></p>
     </footer>
 </body>
 </html>
