Mudanças no cardapio

--- a/atividadeAvaliativa/index.html
+++ b/atividadeAvaliativa/index.html
@@ -16,11 +16,11 @@
     <div class="sobreNos">
         <h1 class="tituloPrincipal">Pizzaria do Jensken</h1>
         <h2 class="titulo">Sobre nós</h2>
-        <p>Nossa pizzaria é <b>tradicional</b> em Brasília fundada em 2009, que tem como foco, pizza de qualidade por um preço accesivel. temos o objetivo de democratizar o acesso a pizza de qualidade para que todos possam comer aquela pizza de <b>qualidade.</b></p>
+        <p> Nossa pizzaria é <b>tradicional</b> em Brasília fundada em 2009, que tem como foco, pizza de <b>qualidade</b> por um preço accesivel. temos o objetivo de levar para todos</p>
     </div>
 
     <h2 class="titulo">Cardápio</h2>
-        <ul class="lista1">
+        <ul class="lista">
             <li>Calabresa ------------ R$ 25</li>
             <li>Portuguesa ---------- R$ 25</li>
             <li>Peperoni ------------- R$ 25</li>
