--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -29,7 +29,7 @@
         <br><br><br>
         
         <figure>
-            <img class="imagens-site" id="prof" src="img/Chris-Bumstead.webp" alt="chris bumstead">
+            <img class="imagens-site" id="prof" src="img/cbum3.webp" alt="chris bumstead">
         
         <h3>Sobre o autor: </h3>
         <h2>Prof. Chris Bumstead</h2>
