--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -30,7 +30,7 @@
         
         <figure>
             <img class="imagens-site" id="prof" src="img/cbum3.webp" alt="chris bumstead">
-        
+        </figure>
         <h3>Sobre o autor: </h3>
         <h2>Prof. Chris Bumstead</h2>
         <br>
