Landing page 2 feita até o button

--- a/landingPage2/index.html
+++ b/landingPage2/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img class="imagemLogo" src="imagens/logo.png" alt="logo loja">
         <ul>
             <li>Air Jordan</li>
             <li>Off White</li>
@@ -21,18 +22,18 @@
 
     <br>
     <section class="conteudo">
-        <h1>Melhor site para comprar suas roupas e tênis primeira linha <b>premium</b> com algodão egípcio</h1>
-        <h3>Desenvolvimento web UCB</h3>
+        <h1>Melhor site para comprar suas roupas e tênis primeira linha <strong>premium</strong> com algodão egípcio</h1>
+        <h3>Desenvolvimento web <a href="https://ucb.catolica.edu.br/portal/">UCB</a></h3>
         
         <figure>
             <img class="imagens-site" src="imagens/air force 1 lv.webp" alt="Air Force 1 LV">
             <figcaption>
-                Últimas lançamentos da fashion week
+                Último lançamento da collab Nike X Louis Vuitton
             </figcaption>
         </figure>
 
         <br>
-        <button><a href="#">Clique aqui para garantir o seu Air force 1 LV</a></button>
+        <button><a href="https://www.youtube.com/watch?v=fertxoU3wWk" target="_blank">Clique aqui para garantir o seu Air force 1 LV</a></button>
 
         <br><br><br>
         
