Projeto blog html finalizado

--- a/landingPage2/index.html
+++ b/landingPage2/index.html
@@ -23,7 +23,7 @@
 
     <br>
     <section class="conteudo">
-        <h1>Melhor site para comprar seu tênis primeira linha <strong>premium</strong> com couro legítimo</h1>
+        <h1>Melhor site para comprar seu tênis primeira linha <strong>Premium</strong> com couro legítimo</h1>
         <h3>Desenvolvimento web <a href="https://ucb.catolica.edu.br/portal/">UCB</a></h3>
         
         <figure>
