Configurações basicas do css

--- a/projeto final/index.html
+++ b/projeto final/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
+        <div class="navbar container">
             <div class="logo"><h1>nam</h1></div>
             <ul class="nav-list">
                 <li><a href="#">home</a></li>
